feat(thefountain): updated imagery

--- a/work/thefountain.html
+++ b/work/thefountain.html
@@ -6,7 +6,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 ---
 	<div class="piece-wrapper unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-6-8">
 	
-		<img src="../images/forth/forth-intro.jpg" alt="forth1"class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
+		<img src="../images/thefountain/thefountain-intro.jpg" alt="The Fountain Vinyl Record Cover Front" class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
 	
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object center-text title">
 			<h1 class="universe w700 no-margin">The Fountain</h1>
@@ -15,20 +15,25 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 		</div>
 		
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object info">
-			<p>Darren Aronofsky's <em>The Fountain</em> is both a visually and acoustically rich movie. With a deeply moving and thematic soundtrack, the design reflects—at times—the quiet somber and sadness—and at others—a cathartic release. The album cover was also based on both the soundtrack's and movie's theme regarding the cyclical nature of things. The illustration features the tree within the dyson sphere, and the nebulous outer shells of the dying star—from which new life arises from their deaths.</p>
+			<p>Darren Aronofsky's <em>The Fountain</em> is both a visually and acoustically rich movie. With a deeply moving and thematic soundtrack, the design reflects—at times—the quiet somber and sadness—and at others—a cathartic and pent up release. The album cover was also based on both the soundtrack's and movie's theme regarding the cyclical nature of things. The illustration features the tree within the dyson sphere, and the nebulous outer shells of the dying star—from which new life arises from their deaths.</p>
 		</div>
 		
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
-			<img src="../images/fountain/1.jpg" alt="Album">
+			<img src="../images/thefountain/1.jpg" alt="The Fountain Album Cover Front with Vinyl">
 		<figcaption class="atom w300 grey"></figcaption>
 		</figure>
 
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
-			<img src="../images/fountain/3.jpg" alt="The Fountain Record Label">
+			<img src="../images/thefountain/2.jpg" alt="The Fountain Album Cover Rear with Vinyl">
 		<figcaption class="atom w300 grey"></figcaption>
 		</figure>
 
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
-			<img src="../images/fountain/2.jpg" alt="Vinyl LP Record">
+			<img src="../images/thefountain/3.jpg" alt="The Fountain Record Label Close Up">
+		<figcaption class="atom w300 grey"></figcaption>
+		</figure>
+
+		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
+			<img src="../images/thefountain/4.jpg" alt="The Fountain Record Label Close Up 2">
 		<figcaption class="atom w300 grey"></figcaption>
 		</figure>
