feat(thefountain): subtitle update

--- a/work/thefountain.html
+++ b/work/thefountain.html
@@ -10,7 +10,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 	
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object center-text title">
 			<h1 class="universe w700 no-margin">The Fountain</h1>
-			<h2 class="planet w100 no-margin serif"><em>A Typographic </em></h2>
+			<h2 class="planet w100 no-margin serif"><em>Illustrious Visuals for Illustrious Sounds</em></h2>
 			<h6 class="no-margin"><small class="atom lightslate"><em>Packaging</em></small></h6>
 		</div>
 		
@@ -34,6 +34,6 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 		</figure>
 
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
-			<img src="../images/thefountain/4.jpg" alt="The Fountain Record Label Close Up 2">
+			<img src="../images/thefountain/4.jpg" alt="The Fountain Vinyl Record">
 		<figcaption class="atom w300 grey"></figcaption>
 		</figure>
