refactor(forth): grammatical fix

--- a/work/forth.html
+++ b/work/forth.html
@@ -21,7 +21,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 		
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
 			<img src="../images/forth/1.jpg" alt="Forth">
-		<figcaption class="atom w300 grey">Topographic maps were a major inspiration for the cover. Making the topography rise into three dimensional space was a particularly fun challenge but it gave the piece a wonderful tactile feel.</figcaption>
+		<figcaption class="atom w300 grey">Topographic maps were a major inspiration for the cover. Making the topography rise into three dimensional space was a particular challenge but it gave the piece a wonderful tactile feel.</figcaption>
 		</figure>		
 		
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
